[tool.poetry]
name = "xrd-shift-danny"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "xrd_shift_danny"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
